--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,21 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    //     {
+    //         "name": "Python: Current File",
+    //         "type": "python",
+    //         "request": "launch",
+    //         "program": "${file}",
+    //         "console": "integratedTerminal",
+    //         "justMyCode": true
+    //     },
         {
-            "name": "Python: Current File",
+            "name": "Main",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "main.py",
             "console": "integratedTerminal",
             "justMyCode": true
-        },
-        // {
-        //     "name": "Main",
-        //     "type": "python",
-        //     "request": "launch",
-        //     "program": "/workspaces/tank-tactics/main.py",
-        //     "console": "integratedTerminal",
-        //     "justMyCode": true
-        // }
+        }
     ]
 }
